plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'com.github.ben-manes.versions' version '0.27.0'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
    api 'org.eclipse.jgit:org.eclipse.jgit:5.5.1.201910021850-r'
    implementation 'org.slf4j:slf4j-api:1.7.29'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'org.jgrapht:jgrapht-core:1.3.1'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'info.picocli:picocli:4.1.2'
    implementation 'commons-io:commons-io:2.6'
    testImplementation 'junit:junit:4.12'
    
    // dependencies for sample code: available only if the property is defined
    if (project.findProperty("stein.runsample") == "yes") {
        implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.19.0'
        implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
        implementation 'org.jgrapht:jgrapht-io:1.3.1'
    } else {
        compileOnly 'org.eclipse.jdt:org.eclipse.jdt.core:3.19.0'
        compileOnly 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
        compileOnly 'org.jgrapht:jgrapht-io:1.3.1'
    }
}

repositories {
    jcenter()
}

jar {
    manifest {
        attributes "Main-Class": "jp.ac.titech.c.se.stein.Loader"
    }
}
